--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon ./src/index.js",
     "lint": "eslint --fix --ext .js .",
     "migrate": "knex migrate:latest --knexfile db/knexfile.js",
-    "rollback": "knex migrate:rollback --knexfile db/knexfile.js"
+    "rollback": "knex migrate:rollback --knexfile db/knexfile.js",
+    "test": "mocha test && yarn lint"
   },
   "repository": {
     "type": "git",
@@ -30,14 +31,18 @@
   },
   "devDependencies": {
     "bootstrap": "^4.3.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-config-problems": "^2.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "faker": "^4.1.0",
+    "mocha": "^6.1.4",
     "node-fetch": "^2.4.0",
     "nodemon": "^1.18.11",
     "prettier": "^1.17.0",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "sinon": "^7.3.2"
   }
 }
